--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8081
 spring.application.name=user-service
 spring.cloud.discovery.enabled=true
-eureka.client.service-url.defaultZone=http:localhost:8761
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
